syntax = "proto3";

package im;

message Response {
  int32 code = 1;           // 对应值1001
  int32 status_code = 2;    // 对应值10364
  int32 error_code = 3;     // 对应值0
  string message = 4;       // 对应值"OK"
  int32 log_id = 5;        // 对应值1
  MessageContainer container = 6;
  string request_id = 7;    // 对应值"20250516162001414874DDCB0694037948"
  int64 server_time = 10;   // 对应值1747383601177
  int64 client_time = 11;   // 对应值1747383601318
  int64 user_id = 13;      // 对应值3756376555520414
}

message MessageContainer {
  message MessageData {
    int32 field1 = 1;
    int32 field2 = 2;
    int32 field3 = 3;
    Message message = 4;
  }
  repeated MessageData messages = 1000;
}

message Message {
  int64 message_id = 1;
  int32 status = 2;
  MessageContent content = 3;
  string conversation_id = 4;
  repeated Participant participants = 5;
}

message MessageContent {
  string conversation_id = 1;
  int32 conversation_type = 2;
  int64 server_message_id = 3;
  int64 create_time = 4;
  int64 message_id = 5;
  int32 message_type = 6;
  int64 sender_id = 7;
  string content = 8;
  repeated ExtInfo ext_info = 9;
  int64 client_time = 10;
  int32 status = 11;
  int32 visible_type = 12;
  int64 create_time_ns = 13;
  string sender_uid = 14;
  int32 conversation_short_id = 17;
}

message ExtInfo {
  string key = 1;
  string value = 2;
}

message Participant {
  int64 user_id = 1;
  string uid = 5;
}